--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,10 +9,12 @@ layout: default
         </div>
     </div>
 </div>
-<section class="container">
-    <div class="row content-row">
-        <div class="col-md-7">
-            {{ content }} 
+<section>
+    <div class="container">
+        <div class="row content-row">
+            <div class="col-md-7">
+                {{ content }}
+            </div>
         </div>
     </div>
 </section>
