--- a/assets/css/pages/_base.scss
+++ b/assets/css/pages/_base.scss
@@ -7,7 +7,7 @@ html, body {
     width: 100%;
     padding: 0;
     margin: 0;
-    font-size: 18px;
+    font-size: 18px; //2vw
     font-family: $sans;
     background: white;
     color: #333;
