--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,34 +1,27 @@
 // // Reset stylesheet
 // @import "_reset.scss";
 
-// Variables, mixins and helper classes
+// Variables and helper classes
 @import "helpers/_helpers.scss";
-
+// Mixins
+@import "helpers/_mixins.scss";
 // Typography
 @import "helpers/_typography.scss";
-
 // Basic layout
 @import "pages/_base.scss";
-
 // Navigation
 @import "components/_nav.scss";
-
 // Footer
 @import "components/_footer.scss";
-
 // Buttons
 @import "components/_btn.scss";
 // Home page styling
 @import "pages/_home.scss";
-
 // About page styling
 @import "pages/_about.scss";
-
 // Portfolio page styling
 @import "pages/_projects.scss";
-
 // Blog pages styling
 @import "pages/_blog.scss";
-
 // Media queries
 @import "components/_media.scss"
