Added modals (working, but messed up with ids)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,34 @@
-        <footer class="container-fluid  footer">
-            <div class="row">
-                <div class="col-md-12">
-                    <p>Alessandra Gherardelli © 2016</p>
-                    <div class="social-buttons">
-                        <a href="http://">
-                            <p class="social">Email</p>
-                        </a>|
-                        <a href="http://www.linkedin.com">
-                            <p class="social">Linkedin</p>
-                        </a>|
-                        <a href="http://github.com">
-                            <p class="social">Github</p>
-                        </a>
-                    </div>
-                </div>
+<footer class="container-fluid  footer">
+    <div class="row">
+        <div class="col-md-12">
+            <p>Alessandra Gherardelli © 2016</p>
+            <div class="social-buttons">
+                <a href="http://">
+                    <p class="social">Email</p>
+                </a>|
+                <a href="http://www.linkedin.com">
+                    <p class="social">Linkedin</p>
+                </a>|
+                <a href="http://github.com">
+                    <p class="social">Github</p>
+                </a>
             </div>
-        </footer>
-        <!--jQuery -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
-        <!--Bootstrap Javascript-->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    </body>
+        </div>
+    </div>
+</footer>
+<!--jQuery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+<!--Animated Modals-->
+<script src="{{ site.baseurl }}/assets/js/animatedModal.js-master/animatedModal.js"></script>
+<!--Bootstrap Javascript-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
+<script>
+    $("#project-01").animatedModal({
+        modalTarget: 'animatedProject'
+    });
+</script>
+</body>
 
 </html>
