--- a/assets/css/pages/_projects.scss
+++ b/assets/css/pages/_projects.scss
@@ -2,48 +2,85 @@
 /*           PROJECTS             */
 /*****************************/
 
+// Project page
 .row.no-gutter.portfolio-row {
-    display: block;
+	display: block;
 }
+
 .portfolio-item {
-	position:relative;
-	display:block;
-	max-width:650px;
+	position: relative;
+	display: block;
+	max-width: 650px;
 	padding: 0;
 	margin: 0;
 }
+
 .portfolio-item .portfolio-item-caption {
-	color:#fff;
-	opacity:0;
-	display:block;
+	color: #fff;
+	opacity: 0;
+	display: block;
 	background: $primary;
-	position:absolute;
-	bottom:0;
-	text-align:center;
-	width:100%;
-	height:100%;
-	transition:all .35s
+	position: absolute;
+	bottom: 0;
+	text-align: center;
+	width: 100%;
+	height: 100%;
+	transition: all .35s
 }
-.btn-default.active,.btn-default:active,.btn-primary.active,.btn-primary:active,.open>.dropdown-toggle.btn-default,.open>.dropdown-toggle.btn-primary {
-	background-image:none
+
+.btn-default.active,
+.btn-default:active,
+.btn-primary.active,
+.btn-primary:active,
+.open>.dropdown-toggle.btn-default,
+.open>.dropdown-toggle.btn-primary {
+	background-image: none
 }
+
 .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
-	width:100%;
-	text-align:center;
-	position:absolute;
-	top:50%;
-	transform:translateY(-50%)
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%)
 }
+
 .portfolio-item:hover .portfolio-item-caption {
-	opacity:0.6;
+	opacity: 0.6;
 }
+
 .portfolio-item:focus {
-	outline:0;
+	outline: 0;
 }
-.portfolio-link:hover{
-    font-weight: 300;
+
+.portfolio-link:hover {
+	font-weight: 300;
 }
-.project-category, .project-name{
-    color: white;
-    font-size: 1.25rem;
+
+.project-category,
+.project-name {
+	color: white;
+	font-size: 1.25rem;
+}
+
+// Modal
+#btn-close-modal {
+	width: 100%;
+	text-align: center;
+	cursor: pointer;
+	color: $accent;
+}
+
+.animated {
+	background-color: white;
+}
+
+.modal-content {
+	background-color: white;
+	-webkit-background-clip: padding-box;
+	background-clip: padding-box;
+	border: none;
+	outline: 0;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
