Re-working modal

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
 
 <script>
     $("#project-01").animatedModal({
-        modalTarget: 'animatedProject'
+        modalTarget: 'modal-01'
     });
 </script>
 </body>
