--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,6 +1,6 @@
 
 {% for modal in site.projects %}
-<div id="#{{ modal.modalID }}">
+<div id="{{ modal.projectID }}">
     <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID -->
     <div id="btn-close-modal" class="close-animatedModal">
         <i class="fa fa-times fa-3x" aria-hidden="true"></i>
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>{{ modal.title }}</h1>
+                    <h2>{{ modal.title }}</h2>
                     {{ modal.content }}
                 </div>
             </div>
