Changed ID numbers, currently not working

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,6 +28,21 @@
     $("#project-01").animatedModal({
         modalTarget: 'modal-01'
     });
+    $("#project-02").animatedModal({
+        modalTarget: 'modal-02'
+    });
+    $("#project-03").animatedModal({
+        modalTarget: 'modal-03'
+    });
+    $("#project-04").animatedModal({
+        modalTarget: 'modal-04'
+    });
+    $("#project-05").animatedModal({
+        modalTarget: 'modal-05'
+    });
+    $("#project-06").animatedModal({
+        modalTarget: 'modal-06'
+    });
 </script>
 </body>
 
