--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,8 +1,8 @@
 
 {% for modal in site.projects %}
-<div id="{{ modal.projectID }}">
+<div id="{{ modal.modalID }}">
     <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID -->
-    <div id="btn-close-modal" class="close-{{ modal.projectID }}">
+    <div id="btn-close-modal" class="close-{{ modal.modalID }}">
         <i class="fa fa-times fa-3x" aria-hidden="true"></i>
     </div>
 
@@ -16,4 +16,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endfor %}
