--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,13 +7,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button> <a class="navbar-brand" href="/"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a> </div>
+          </button> <a class="navbar-brand" href="/" {% if page.url == "/" %}class="active"{% endif %}><i class="fa fa-home fa-2x" aria-hidden="true"></i></a> </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/about/">About</a></li>
-                        <li><a href="/projects/">Projects</a></li>
-                        <li><a href="/blog/">Blog</a></li>
+                        <li><a href="/about/" {% if page.url == "/about/" %}class="active"{% endif %}>About</a></li>
+                        <li><a href="/projects/" {% if page.url == "/projects/" %}class="active"{% endif %}>Projects</a></li>
+                        <li><a href="/blog/" {% if page.url == "/blog/" %}class="active"{% endif %}>Blog</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
