--- a/assets/css/helpers/_typography.scss
+++ b/assets/css/helpers/_typography.scss
@@ -31,11 +31,11 @@ h6 {
     font-size: 0.875rem;
 }
 
-p, a, button, li {
+p, a, button, li, input {
     line-height: 1.833rem;
     font-size: 1rem;
 }
-p{
+p, li{
   font-family: 'Merriweather', serif;
   font-size: 1rem;
   margin-bottom: 1rem;
