--- a/assets/css/pages/_blog.scss
+++ b/assets/css/pages/_blog.scss
@@ -1,32 +1,67 @@
 /*******************************/
 /*           BLOG             */
 /*****************************/
-
-.blog{
+.blog {
   padding-top: 5%;
 }
-.blog-title, .blog-subtitle{
+.blog .row{
+  display: block;
+}
+.blog-header{
+  margin: 0;
+  padding: 0;
+}
+
+.blog-title,
+.blog-subtitle {
   margin: 0;
   line-height: 1;
 }
-.blog-title:hover{
+
+.blog-title:hover,
+.blog-title:focus,
+.blog-title:active {
   color: $accent;
 }
 
-.blog-subtitle{
+.blog-subtitle {
   @extend .presentation-subtitle;
   margin: 10px 0 20px 0;
 }
-.blog-timestamp{
+.blog-meta p{
+  display: inline;
+  padding: 0 10%;
+}
+
+.blog-timestamp {
   color: $medium;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 0.8rem;
   font-family: $serif;
   margin: 0;
+  font-weight: 600;
+}
+.blog-author{
+  @extend .blog-timestamp;
+  text-transform: capitalize;
+  font-weight: 400;
+  letter-spacing: 0px;
+  
 }
 .blog-img {
   width: 150px;
   height: 150px;
   margin: 0 auto;
+  object-fit: cover; // Add a polyfill for this feature
+  overflow: hidden;
+}
+
+
+
+.blog-cover {
+  background-size: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
 }
