--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,11 +34,11 @@ h5 {
 h6 {
   font-size: 0.875rem; }
 
-p, a, button, li {
+p, a, button, li, input {
   line-height: 1.833rem;
   font-size: 1rem; }
 
-p {
+p, li {
   font-family: 'Merriweather', serif;
   font-size: 1rem;
   margin-bottom: 1rem;
@@ -284,33 +284,68 @@ section {
 .blog {
   padding-top: 5%; }
 
-.blog-title, .blog-subtitle {
+.blog .row {
+  display: block; }
+
+.blog-header {
+  margin: 0;
+  padding: 0; }
+
+.blog-title,
+.blog-subtitle {
   margin: 0;
   line-height: 1; }
 
-.blog-title:hover {
+.blog-title:hover,
+.blog-title:focus,
+.blog-title:active {
   color: #ef5f5a; }
 
 .blog-subtitle {
   margin: 10px 0 20px 0; }
 
-.blog-timestamp {
+.blog-meta p {
+  display: inline;
+  padding: 0 10%; }
+
+.blog-timestamp, .blog-author {
   color: #bbb;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 0.8rem;
   font-family: "Merriweather", serif;
-  margin: 0; }
+  margin: 0;
+  font-weight: 600; }
+
+.blog-author {
+  text-transform: capitalize;
+  font-weight: 400;
+  letter-spacing: 0px; }
 
 .blog-img {
   width: 150px;
   height: 150px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  object-fit: cover;
+  overflow: hidden; }
+
+.blog-cover {
+  background-size: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 300px; }
 
 /*******************************/
 /*           MEDIA             */
 /*****************************/
-@media (min-width: 960px) {
+@media (max-width: 599px) {
+  .blog-meta p {
+    padding: 0 20%; }
+
+  .blog-header > h1 {
+    margin: 15px;
+    padding: 15px; } }
+@media (min-width: 900px) {
   .home {
     justify-content: center;
     align-items: flex-start;
