Added images to portfolio

--- a/assets/css/helpers/_typography.scss
+++ b/assets/css/helpers/_typography.scss
@@ -8,39 +8,40 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
-h2 {
-    font-size: 2.333rem;
-}
+// h2 {
+//     font-size: 2.333rem;
+// }
 
-h3 {
-    font-size: 1.375rem;
-}
+// h3 {
+//     font-size: 1.375rem;
+// }
 
-h4 {
-    font-size: 1.125rem;
-}
+// h4 {
+//     font-size: 1.125rem;
+// }
 
-h5 {
-    font-size: 1rem;
-}
+// h5 {
+//     font-size: 1rem;
+// }
 
-h6 {
-    font-size: 0.875rem;
-}
+// h6 {
+//     font-size: 0.875rem;
+// }
 
-p, a, button, li, input {
-    line-height: 1.833rem;
-    font-size: 1rem;
-}
-p, li{
+// p, a, button, li, input {
+//     line-height: 1.833rem;
+//     // font-size: 1rem;
+// }
+p {
   font-family: 'Merriweather', serif;
-  font-size: 1rem;
+//   font-size: 1rem;
   margin-bottom: 1rem;
   letter-spacing: 0.01rem;
-  line-height: 2rem;
+//   line-height: 2rem;
+    line-height: 1.375rem;
 }
 
 a {
@@ -58,4 +59,8 @@ hr{
 }
 .section-title{
     text-align: center;
+}
+
+.content li{
+  font-family: $serif;
 }
