--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,4 +24,4 @@
 // Blog pages styling
 @import "pages/_blog.scss";
 // Media queries
-@import "components/_media.scss"
+@import "helpers/_media.scss"
