--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,48 +1,42 @@
-<footer class="container-fluid  footer">
-    <div class="row">
-        <div class="col-md-12">
-            <p>Alessandra Gherardelli © 2016</p>
-            <div class="social-buttons">
-                {% if site.author.email %}
-                <a href="mailto:{{ site.author.email }}">
-                    <p class="social">Email</p>
-                </a>
-                {% endif %} 
-                {% if site.author.facebook %}
-                <a href="http://www.facebook.com/{{ site.author.facebook }}">
-                    <p class="social">Facebook</p>
-                </a> {% endif %} 
-                {% if site.author.twitter %}
-                <a href="http://www.twitter.com/{{ site.author.twitter }}">
-                    <p class="social">Twitter</p>
-                </a> {% endif %} 
-                {% if site.author.medium %}
-                <a href="http://www.medium.com/@{{ site.author.medium }}">
-                    <p class="social">Medium</p>
-                </a> {% endif %}                   
-                {% if site.author.linkedin %}
-                <a href="http://www.linkedin.com/{{ site.author.linkedin }}">
-                    <p class="social">Linkedin</p>
-                </a> {% endif %}
-                 {% if site.author.tumbler %}
-                <a href="https://{{ site.author.tumblr }}.tumblr.com">
-                    <p class="social">Tumblr</p>
-                </a> {% endif %}
-                {% if site.author.github %}
-                <a href="http://github.com/{{ site.author.github}}">
-                    <p class="social">Github</p>
-                </a>
-                {% endif %}                
-                {% if site.author.dribbble %}
-                <a href="https://dribbble.com/{{ site.author.dribbble }}">
-                    <p class="social">Dribbble</p>
-                </a>
-                {% endif %}
-                {% if site.author.behance %}
-                <a href="https://www.behance.net/{{ site.author.behance }}">
-                    <p class="social">Behance</p>
-                </a>
-                {% endif %}
+<footer>
+    <div class="container-fluid footer">
+        <div class="row">
+            <div class="col-xs-12">
+                <p>Alessandra Gherardelli © 2016</p>
+                <div class="social-buttons">
+                    {% if site.author.email %}
+                    <a href="mailto:{{ site.author.email }}">
+                        <p class="social">Email</p>
+                    </a>
+                    {% endif %} {% if site.author.facebook %}
+                    <a href="http://www.facebook.com/{{ site.author.facebook }}">
+                        <p class="social">Facebook</p>
+                    </a> {% endif %} {% if site.author.twitter %}
+                    <a href="http://www.twitter.com/{{ site.author.twitter }}">
+                        <p class="social">Twitter</p>
+                    </a> {% endif %} {% if site.author.medium %}
+                    <a href="http://www.medium.com/@{{ site.author.medium }}">
+                        <p class="social">Medium</p>
+                    </a> {% endif %} {% if site.author.linkedin %}
+                    <a href="http://www.linkedin.com/{{ site.author.linkedin }}">
+                        <p class="social">Linkedin</p>
+                    </a> {% endif %} {% if site.author.tumbler %}
+                    <a href="https://{{ site.author.tumblr }}.tumblr.com">
+                        <p class="social">Tumblr</p>
+                    </a> {% endif %} {% if site.author.github %}
+                    <a href="http://github.com/{{ site.author.github}}">
+                        <p class="social">Github</p>
+                    </a>
+                    {% endif %} {% if site.author.dribbble %}
+                    <a href="https://dribbble.com/{{ site.author.dribbble }}">
+                        <p class="social">Dribbble</p>
+                    </a>
+                    {% endif %} {% if site.author.behance %}
+                    <a href="https://www.behance.net/{{ site.author.behance }}">
+                        <p class="social">Behance</p>
+                    </a>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
