--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,24 +1,14 @@
 --- 
 layout: default
 ---
-<div class="container-fluid">
-    <div class="row text-center">
-        <div class="col-xs-12 section-title blog-header">
-            {% if page.cover_image %}
-            <img class="img-responsive blog-cover" src="{{ page.cover_image }}" /> {% endif %}
-            <h1>{{ page.title }}</h1>
-            <div class="blog-meta">
-                <p class="blog-author"> {{ site.author.name }} </p>
-                <p class="blog-timestamp">{{ page.date | date: "%d %B %Y" }}</p>
-            </div>
-
-        </div>
-    </div>
-</div>
 <section>
     <div class="container">
-        <div class="row content-row">
-            <div class="col-xs-12 col-md-7">
+        <div class="row content">
+            <div class="col-xs-12 col-md-7 content-blog">
+                            {% if page.cover_image %}
+            <img class="img-responsive blog-cover" src="{{ page.cover_image }}" /> {% endif %}
+            <h1>{{ page.title }}</h1>
+                <p class="blog-meta blog-timestamp">{{ page.date | date: "%d %B %Y" }}</p>
                 {{ content }}
             </div>
         </div>
