--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,33 +17,13 @@ h1, h2, h3, h4, h5, h6 {
   color: #118ab2; }
 
 h1 {
-  font-size: 3rem; }
+  font-size: 2.5rem; }
 
-h2 {
-  font-size: 2.333rem; }
-
-h3 {
-  font-size: 1.375rem; }
-
-h4 {
-  font-size: 1.125rem; }
-
-h5 {
-  font-size: 1rem; }
-
-h6 {
-  font-size: 0.875rem; }
-
-p, a, button, li, input {
-  line-height: 1.833rem;
-  font-size: 1rem; }
-
-p, li {
+p {
   font-family: 'Merriweather', serif;
-  font-size: 1rem;
   margin-bottom: 1rem;
   letter-spacing: 0.01rem;
-  line-height: 2rem; }
+  line-height: 1.375rem; }
 
 a {
   text-decoration: none;
@@ -61,6 +41,9 @@ hr {
 .section-title {
   text-align: center; }
 
+.content li {
+  font-family: "Merriweather", serif; }
+
 /*******************************/
 /*       BASE                 */
 /*****************************/
@@ -69,7 +52,7 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
   background: white;
   color: #333;
@@ -87,6 +70,9 @@ section {
   display: flex;
   margin: 0;
   padding: 0; }
+
+.content {
+  justify-content: center; }
 
 /*******************************/
 /*       NAVBAR           */
@@ -192,10 +178,6 @@ section {
 /*******************************/
 /*           ABOUT             */
 /*****************************/
-.content-row {
-  display: flex;
-  justify-content: center; }
-
 /*******************************/
 /*           PROJECTS             */
 /*****************************/
@@ -291,6 +273,12 @@ section {
   margin: 0;
   padding: 0; }
 
+.blog-cover {
+  background-size: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 300px; }
+
 .blog-title,
 .blog-subtitle {
   margin: 0;
@@ -302,7 +290,7 @@ section {
   color: #ef5f5a; }
 
 .blog-subtitle {
-  margin: 10px 0 20px 0; }
+  margin: 10px 0; }
 
 .blog-meta p {
   display: inline;
@@ -323,17 +311,11 @@ section {
   letter-spacing: 0px; }
 
 .blog-img {
-  width: 150px;
-  height: 150px;
-  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+  margin: 10px auto;
   object-fit: cover;
   overflow: hidden; }
-
-.blog-cover {
-  background-size: cover;
-  object-fit: cover;
-  width: 100%;
-  height: 300px; }
 
 /*******************************/
 /*           MEDIA             */
@@ -344,7 +326,10 @@ section {
 
   .blog-header > h1 {
     margin: 15px;
-    padding: 15px; } }
+    padding: 15px; }
+
+  .social-button {
+    flex-direction: column; } }
 @media (min-width: 900px) {
   .home {
     justify-content: center;
