--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
                             {% if page.cover_image %}
             <img class="img-responsive blog-cover" src="{{ page.cover_image }}" /> {% endif %}
             <h1>{{ page.title }}</h1>
-                <p class="blog-meta blog-timestamp">{{ page.date | date: "%d %B %Y" }}</p>
+                <p class="blog-timestamp">{{ page.date | date: "%d %B %Y" }}</p>
                 {{ content }}
             </div>
         </div>
