--- a/assets/css/helpers/_media.scss
+++ b/assets/css/helpers/_media.scss
@@ -4,6 +4,29 @@
 
 // Extra small screens
 @media (max-width: 599px) {
+  h1 {
+    font-size: 2.5em;
+    /* 2.5x body copy size = 40px */
+    line-height: 1.125;
+  }
+  h2 {
+    font-size: 2em;
+    /* 2x body copy size = 32px */
+    line-height: 1.25;
+  }
+  h3 {
+    font-size: 1.5em;
+    /* 1.5x body copy size = 24px */
+    line-height: 1.25;
+  }
+  h4 {
+    line-height: 1.22222222;
+    /* (22px / 18px */
+  }
+  p{
+    font-size: 0.95rem;
+    line-height: 1.5;
+  }
   .blog-meta p {
     padding: 0 20%;
   }
@@ -11,16 +34,36 @@
     margin: 15px;
     padding: 15px;
   }
-  .social-button{
+  .social-button {
     flex-direction: column;
   }
 }
 
 // Small screens
-// @media (min-width: 600px) {
-
-// }
-
+@media (min-width: 600px) {
+  h1 {
+    font-size: 3em;
+    /* 3x body copy size = 48px */
+    line-height: 1.05;
+    /* keep to a multiple of the 20px line height 
+    and something more appropriate for display headings */
+  }
+  h2 {
+    font-size: 2.25em;
+    /* 2.25x body copy size = 36px */
+    line-height: 1.25;
+  }
+  h3 {
+    font-size: 1.75em;
+    /* 1.75x body copy size = 28px */
+    line-height: 1.25;
+  }
+  h4 {
+    font-size: 1.125em;
+    /* 1.125x body copy size = 18px */
+    line-height: 1.11111111;
+  }
+}
 // Medium screens
 @media (min-width: 900px) {
   .home {
@@ -29,11 +72,9 @@
     margin-top: 50px;
   }
 }
-
 // Large screens
 // @media (min-width: 1200px) {
 // }
-
 // // Ultra-large screens
 // @media (min-width: 1800px) {
 // }
