--- a/assets/css/pages/_layout.scss
+++ b/assets/css/pages/_layout.scss
@@ -1,4 +1,84 @@
 /*******************************/
+/*       BASE                 */
+/*****************************/
+
+html, body {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    font-size: 16px; //2vw
+    font-family: $sans;
+    background: white;
+    color: #333;
+    font-weight: 400;
+}
+section{
+  min-height: 100%;
+  margin: 0 0 1.125rem 0;
+  padding: 0;
+}
+
+.container-fluid{
+  padding: 0;
+}
+
+.row {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.content{
+  justify-content: center;
+}
+
+/*******************************/
+/*       HOMEPAGE             */
+/*****************************/
+.home{
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+  text-align: center;
+  padding-bottom: 80px;
+}
+
+.home-profile {
+    margin: -30px auto 30px ;
+    height: 180px;
+}
+
+/*******************************/
+/*           BLOG             */
+/*****************************/
+.blog {
+  padding-top: 5%;
+}
+
+.blog-header{
+  margin: 0;
+  padding: 0;
+}
+.blog-cover {
+  background-size: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+}
+
+.blog-img {
+  width: 100px;
+  height: 100px;
+  margin: 10px auto;
+  object-fit: cover; // Add a polyfill for this feature
+  overflow: hidden;
+}
+
+
+
+
+/*******************************/
 /*           PROJECTS             */
 /*****************************/
 
