--- a/assets/css/pages/_layout.scss
+++ b/assets/css/pages/_layout.scss
@@ -94,7 +94,7 @@ section{
 .portfolio-item {
 	position: relative;
 	display: block;
-	max-width: 650px;
+	max-width: 50%;
 	padding: 0;
 	margin: 0;
 }
