Fixed responsiveness projects@

--- a/assets/css/helpers/_media.scss
+++ b/assets/css/helpers/_media.scss
@@ -71,6 +71,10 @@
     align-items: flex-start;
     margin-top: 50px;
   }
+  .portfolio-item {
+    max-width: 47%;
+}
+
 }
 // Large screens
 // @media (min-width: 1200px) {
