--- a/assets/css/pages/_layout.scss
+++ b/assets/css/pages/_layout.scss
@@ -94,9 +94,8 @@ section{
 .portfolio-item {
 	position: relative;
 	display: block;
-	max-width: 50%;
 	padding: 0;
-	margin: 0;
+	margin: 10px;
 }
 
 .portfolio-item .portfolio-item-caption {
