--- a/assets/css/pages/_layout.scss
+++ b/assets/css/pages/_layout.scss
@@ -111,6 +111,10 @@ section{
 	transition: all .35s
 }
 
+.portfolio-img{
+	height: 300px;
+}
+
 .btn-default.active,
 .btn-default:active,
 .btn-primary.active,
