--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 /*       TYPOGRPAHY           */
 /*****************************/
 body {
-  font-size: 100%; }
+  font-size: 18px; }
 
 body,
 h1,
@@ -193,6 +193,9 @@ section {
   width: 100%;
   height: 100%;
   transition: all 0.35s; }
+
+.portfolio-img {
+  height: 300px; }
 
 .btn-default.active,
 .btn-default:active,
