--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -9,9 +9,15 @@
     <div class="modal-content">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-7 center">
                     <h2>{{ modal.title }}</h2>
                     {{ modal.content }}
+                    
+                    <hr>
+                    <div class="text-center">
+                    <p>...and if you want to know more about my work, skills and experiences, don't forget to</p>
+                    <a class="btn btn-default" href="/projects/">download my CV</a>
+                    </div>
                 </div>
             </div>
         </div>
