--- a/assets/css/pages/_layout.scss
+++ b/assets/css/pages/_layout.scss
@@ -111,9 +111,9 @@ section{
 	transition: all .35s
 }
 
-.portfolio-img{
-	height: 300px;
-}
+// .portfolio-img{
+// 	height: 300px;
+// }
 
 .btn-default.active,
 .btn-default:active,
