--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,5 +13,5 @@
     <!--Animated modals-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
     <!--Custom styling-->
-    <link href="{{ site.baseurl }}/assets/css/style.css" type="text/css" rel="stylesheet" />
+    <link href="{{ site.baseurl }}/css/style.css" type="text/css" rel="stylesheet" />
 </head>
