--- a/css/media.scss
+++ b/css/media.scss
@@ -1,6 +1,22 @@
 /*******************************/
 /*           MEDIA             */
 /*****************************/
+@media all {html {font-size: 21px;}}
+@media all and (max-width:1000px){html {font-size: 24px;}}
+@media all and (max-width:960px){html {font-size: 23px;}}
+@media all and (max-width:920px){html {font-size: 22px;}}
+@media all and (max-width:880px){html {font-size: 21px;}}
+@media all and (max-width:840px){html {font-size: 20px;}}
+@media all and (max-width:800px){html {font-size: 19px;}}
+@media all and (max-width:760px){html {font-size: 18px;}}
+@media all and (max-width:720px){html {font-size: 17px;}}
+@media all and (max-width:680px){html {font-size: 16px;}}
+@media all and (max-width:640px){html {font-size: 15px;}}
+@media all and (max-width:600px){html {font-size: 14px;}}
+@media all and (max-width:560px){html {font-size: 13px;}}
+@media all and (max-width:520px){html {font-size: 13px;}}
+
+
 
 // Extra small screens
 @media (max-width: 599px) {
@@ -45,7 +61,7 @@
     font-size: 3em;
     /* 3x body copy size = 48px */
     line-height: 1.05;
-    /* keep to a multiple of the 20px line height 
+    /* keep to a multiple of the 20px line height
     and something more appropriate for display headings */
   }
   h2 {
