--- a/css/base.scss
+++ b/css/base.scss
@@ -1,7 +1,10 @@
 /*******************************/
 /*       BASE                 */
 /*****************************/
-
+*{
+  margin: 0;
+  padding: 0;
+}
 html, body {
     height: 100%;
     width: 100%;
