--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
-            <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-bars" aria-hidden="true"></i>
 
           </button>  </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
