--- a/css/base.scss
+++ b/css/base.scss
@@ -1,17 +1,14 @@
 /*******************************/
 /*       BASE                 */
 /*****************************/
-*{
-  margin: 0;
-  padding: 0;
-}
+
 html, body {
     height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
-    font-size: 16px; //2vw
     font-family: $sans;
+    font-size: 100%;
     background: white;
     color: #333;
     font-weight: 400;
