--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,3 +12,6 @@ layout: default
         </div>
     </div>
 </section>
+<script>
+document.querySelectorAll('img').classList.add('img-responsive');
+</script>
