--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,7 +12,7 @@
                     <ul class="nav navbar-nav navbar-right">
                       <li><a href="/" {% if page.url == "/" %}class="active"{% endif %}> Home</i></a></li>
                         <li><a href="/about/" {% if page.url == "/about/" %}class="active"{% endif %}>About</a></li>
-                        <li><a href="/projects/" {% if page.url == "/projects/" %}class="active"{% endif %}>Projects</a></li>
+                        <li><a href="/work/" {% if page.url == "/work/" %}class="active"{% endif %}>Work</a></li>
                         <li><a href="/blog/" {% if page.url == "/blog/" %}class="active"{% endif %}>Blog</a></li>
                     </ul>
                 </div>
