--- a/css/media.scss
+++ b/css/media.scss
@@ -1,43 +1,34 @@
 /*******************************/
 /*           MEDIA             */
 /*****************************/
-@media all {html {font-size: 18px;}}
-@media all and (max-width:1000px){html {font-size: 24px;}}
-@media all and (max-width:960px){html {font-size: 23px;}}
-@media all and (max-width:920px){html {font-size: 22px;}}
-@media all and (max-width:880px){html {font-size: 21px;}}
-@media all and (max-width:840px){html {font-size: 20px;}}
-@media all and (max-width:800px){html {font-size: 19px;}}
-@media all and (max-width:760px){html {font-size: 18px;}}
-@media all and (max-width:720px){html {font-size: 17px;}}
-@media all and (max-width:680px){html {font-size: 16px;}}
-@media all and (max-width:640px){html {font-size: 15px;}}
-@media all and (max-width:600px){html {font-size: 14px;}}
-@media all and (max-width:560px){html {font-size: 13px;}}
-@media all and (max-width:520px){html {font-size: 13px;}}
-
-
+// Ultra-large screens
+@media (min-width: 1800px) {
+  html{
+    font-size: 24px;
+  }
+}
+// Large screens
+@media (min-width: 1200px) {
+  html{
+    font-size: 22px;
+  }
+}
+// Medium screens
+@media (min-width: 900px) {
+  html{
+    font-size: 22px;
+  }
+  .home {
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 50px;
+  }
+}
 
 // Extra small screens
 @media (max-width: 599px) {
-  h1 {
-    font-size: 2.5em;
-    /* 2.5x body copy size = 40px */
-    line-height: 1.125;
-  }
-  h2 {
-    font-size: 2em;
-    /* 2x body copy size = 32px */
-    line-height: 1.25;
-  }
-  h3 {
-    font-size: 1.5em;
-    /* 1.5x body copy size = 24px */
-    line-height: 1.25;
-  }
-  h4 {
-    line-height: 1.22222222;
-    /* (22px / 18px */
+  html{
+    font-size: 18px;
   }
   .blog-meta p {
     padding: 0 20%;
@@ -49,34 +40,7 @@
   .social-button {
     flex-direction: column;
   }
-}
-
-// Small screens
-@media (min-width: 600px) {
-  h1 {
-    font-size: 3em;
-    /* 3x body copy size = 48px */
-    line-height: 1.05;
-    /* keep to a multiple of the 20px line height
-    and something more appropriate for display headings */
-  }
-  h2 {
-    font-size: 2.25em;
-    /* 2.25x body copy size = 36px */
-    line-height: 1.25;
+  p, .content-li{
+    font-size: .9rem;
   }
 }
-// Medium screens
-@media (min-width: 900px) {
-  .home {
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 50px;
-  }
-}
-// Large screens
-// @media (min-width: 1200px) {
-// }
-// // Ultra-large screens
-// @media (min-width: 1800px) {
-// }
