--- a/css/media.scss
+++ b/css/media.scss
@@ -11,13 +11,13 @@
   }
 }
 // Large screens
-@media (min-width: 1200px) {
+@media (min-width: 1200px) and (max-width: 1799px) {
   html{
     font-size: 22px;
   }
 }
 // Medium screens
-@media (min-width: 900px) {
+@media (min-width: 900px) and (max-width: 1199px) {
   html{
     font-size: 22px;
   }
@@ -25,6 +25,25 @@
     justify-content: center;
     align-items: flex-start;
     margin-top: 50px;
+  }
+}
+// Small screens
+@media (min-width 600px) and (max-width: 899px) {
+  html{
+    font-size: 18px;
+  }
+  .blog-meta p {
+    padding: 0 20%;
+  }
+  .blog-header>h1 {
+    margin: 15px;
+    padding: 15px;
+  }
+  .social-button {
+    flex-direction: column;
+  }
+  p, .content-li{
+    font-size: .8rem;
   }
 }
 
