Few changes to responsive typography

--- a/css/footer.scss
+++ b/css/footer.scss
@@ -3,6 +3,7 @@
 /*****************************/
 
 .footer {
+    width: 100%;
     text-align: center;
     background: $light;
     color: $dark;
@@ -15,7 +16,7 @@
 }
 
 .footer p {
-    font-size: 0.8rem;
+    font-size: 0.6rem;
 }
 
 .social-buttons {
