--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,10 +10,10 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                      <li><a href="/" {% if page.url == "/" %}class="active"{% endif %}> Home</i></a></li>
-                        <li><a href="/about/" {% if page.url == "/about/" %}class="active"{% endif %}>About</a></li>
-                        <li><a href="/work/" {% if page.url == "/work/" %}class="active"{% endif %}>Work</a></li>
-                        <li><a href="/blog/" {% if page.url == "/blog/" %}class="active"{% endif %}>Blog</a></li>
+                      <li><a href="/" {% if page.url == "/" %}class="active no-decoration"{% endif %}> Home</i></a></li>
+                        <li><a href="/about/" {% if page.url == "/about/" %}class="active no-decoration"{% endif %}>About</a></li>
+                        <li><a href="/work/" {% if page.url == "/work/" %}class="active no-decoration"{% endif %}>Work</a></li>
+                        <li><a href="/blog/" {% if page.url == "/blog/" %}class="active no-decoration"{% endif %}>Blog</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
