Changed ico file

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,4 +15,6 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
     <!--Custom styling-->
     <link href="{{ site.baseurl }}/css/style.css" type="text/css" rel="stylesheet" />
+
+    <link rel="icon" type="image/png" href="..\assets\images\ag.ico">
 </head>
